Updated the css for the header to align the jwt logo and also fixed react error with 'class'

--- a/src/main.css
+++ b/src/main.css
@@ -257,9 +257,13 @@ body {
   font-size: 1em;
   margin-left: 7%;
   width:100%;
-  margin-top: 20px;
+  margin-top: 30px;
   position: absolute;
   z-index: 1;
+}
+
+#presentedBy img {
+  vertical-align: middle;
 }
 
 #presentedBy--text {
